updated cleaner script for 2017 and data folder updated

--- a/Panda Files/datacleaner_ra.ipynb
+++ b/Panda Files/datacleaner_ra.ipynb
@@ -9,28 +9,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 10 10 10 10\n"
+      "24 24 24 24 24\n"
      ]
     }
    ],
    "source": [
     "#Set dependencies\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import gmaps\n",
     "import os\n",
-    "from pprint import pprint\n",
-    "from scipy.stats import linregress\n",
-    "from functools import reduce\n",
-    "import scipy.stats as st\n",
+    "import numpy as np\n",
     "\n",
-    "#import API key\n",
-    "from config import g_key\n",
-    "\n",
-    "sensors = ['42043','42044','42047','8764314','8770613']\n",
-    "months = ['August 2018', 'Sept 2018']\n",
-    "monthsf = ['0818','0918']\n",
+    "sensors = ['42043','42044','42047','8764314','8770613', 'TABS-X']\n",
+    "months = ['June 2017','July 2017','August 2017','Sept 2017']\n",
+    "monthsf = ['0617','0717','0817','0917']\n",
     "\n",
     "file1 = []\n",
     "file2 = []\n",
@@ -41,11 +32,11 @@
     "#naming csv file for all resources\n",
     "for i in sensors:\n",
     "    for j in months:\n",
-    "        file1.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey/{i}/{j} air_pressure.csv\")\n",
-    "        file2.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey/{i}/{j} air_temperature.csv\")\n",
-    "        file3.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey/{i}/{j} sea_water_practical_salinity.csv\")\n",
-    "        file4.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey/{i}/{j} sea_water_temperature.csv\")\n",
-    "        file5.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey/{i}/{j} winds.csv\")\n",
+    "        file1.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey 17/{i}/{j} air_pressure.csv\")\n",
+    "        file2.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey 17/{i}/{j} air_temperature.csv\")\n",
+    "        file3.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey 17/{i}/{j} sea_water_practical_salinity.csv\")\n",
+    "        file4.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey 17/{i}/{j} sea_water_temperature.csv\")\n",
+    "        file5.append(f\"../Resources/Project Data/Dirty Trail Data/Harvey 17/{i}/{j} winds.csv\")\n",
     "        \n",
     "print(len(file1),len(file2),len(file3),len(file4),len(file5))"
    ]
@@ -68,13 +59,27 @@
       "Reading csvfile 6\n",
       "Reading csvfile 7\n",
       "Reading csvfile 8\n",
-      "Reading csvfile 9\n"
+      "Reading csvfile 9\n",
+      "Reading csvfile 10\n",
+      "Reading csvfile 11\n",
+      "Reading csvfile 12\n",
+      "Reading csvfile 13\n",
+      "Reading csvfile 14\n",
+      "Reading csvfile 15\n",
+      "Reading csvfile 16\n",
+      "Reading csvfile 17\n",
+      "Reading csvfile 18\n",
+      "Reading csvfile 19\n",
+      "Reading csvfile 20\n",
+      "Reading csvfile 21\n",
+      "Reading csvfile 22\n",
+      "Reading csvfile 23\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(10, 5)"
+       "(24, 5)"
       ]
      },
      "execution_count": 2,
@@ -108,25 +113,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 days 00:30:00\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 00:30:00\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 00:30:00\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 00:30:01.251738\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 00:30:01.251738\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 00:30:01.251738\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 01:00:59.097127\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 01:10:50.246305\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 01:10:50.246305\n",
+      "0 days 00:45:02.362204\n",
       "\n",
-      "0 days 01:10:50.246305\n",
+      "0 days 00:45:02.362204\n",
+      "\n",
+      "0 days 00:45:02.362204\n",
+      "\n",
+      "0 days 00:45:02.362204\n",
+      "\n",
+      "0 days 01:09:28.115942\n",
+      "\n",
+      "0 days 01:09:28.115942\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
+      "\n",
+      "0 days 01:10:19.905213\n",
       "\n"
      ]
     }
@@ -172,7 +205,21 @@
       "Exporting cleaned csvfile 6\n",
       "Exporting cleaned csvfile 7\n",
       "Exporting cleaned csvfile 8\n",
-      "Exporting cleaned csvfile 9\n"
+      "Exporting cleaned csvfile 9\n",
+      "Exporting cleaned csvfile 10\n",
+      "Exporting cleaned csvfile 11\n",
+      "Exporting cleaned csvfile 12\n",
+      "Exporting cleaned csvfile 13\n",
+      "Exporting cleaned csvfile 14\n",
+      "Exporting cleaned csvfile 15\n",
+      "Exporting cleaned csvfile 16\n",
+      "Exporting cleaned csvfile 17\n",
+      "Exporting cleaned csvfile 18\n",
+      "Exporting cleaned csvfile 19\n",
+      "Exporting cleaned csvfile 20\n",
+      "Exporting cleaned csvfile 21\n",
+      "Exporting cleaned csvfile 22\n",
+      "Exporting cleaned csvfile 23\n"
      ]
     }
    ],
@@ -189,7 +236,7 @@
     "           'air_pressure(mBar)', 'air_temperature',   'sea_water_practical_salinity', 'sea_water_temperature', 'wind_speed']]\n",
     "\n",
     "        #Set the file path to export city data\n",
-    "        csvFile = os.path.join(\"../data\",f\"{sensors[i]}-{monthsf[j]}.csv\")\n",
+    "        csvFile = os.path.join(\"../data/2017\",f\"{sensors[i]}-{monthsf[j]}.csv\")\n",
     "\n",
     "        #Export clean datframe to csv file\n",
     "        df_clean.to_csv(csvFile)\n",
