added script to generate pvalue

--- a/Panda Files/datapval_ra.ipynb
+++ b/Panda Files/datapval_ra.ipynb
@@ -923,25 +923,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>42019</th>\n",
-       "      <td>2.310115e-148</td>\n",
-       "      <td>9.833848e-26</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>1.020359e-51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>42043</th>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>1.703387e-91</td>\n",
        "      <td>0.000000e+00</td>\n",
        "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42044</th>\n",
-       "      <td>7.860838e-148</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>1.253240e-65</td>\n",
-       "      <td>5.564463e-65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42047</th>\n",
@@ -956,6 +942,20 @@
        "      <td>7.328232e-48</td>\n",
        "      <td>1.567202e-34</td>\n",
        "      <td>5.221730e-43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42019</th>\n",
+       "      <td>2.310115e-148</td>\n",
+       "      <td>9.833848e-26</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.020359e-51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42044</th>\n",
+       "      <td>7.860838e-148</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.253240e-65</td>\n",
+       "      <td>5.564463e-65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8770613</th>\n",
@@ -977,20 +977,20 @@
       ],
       "text/plain": [
        "          Air Pressure  Air Temperature  Sea Water Salinity  \\\n",
-       "42019    2.310115e-148     9.833848e-26        0.000000e+00   \n",
        "42043     0.000000e+00     1.703387e-91        0.000000e+00   \n",
-       "42044    7.860838e-148     0.000000e+00        1.253240e-65   \n",
        "42047    6.073548e-248    1.849299e-104        0.000000e+00   \n",
        "8764314  3.602785e-173     7.328232e-48        1.567202e-34   \n",
+       "42019    2.310115e-148     9.833848e-26        0.000000e+00   \n",
+       "42044    7.860838e-148     0.000000e+00        1.253240e-65   \n",
        "8770613  2.377103e-134     6.692460e-08        4.002273e-01   \n",
        "TABS      3.108045e-01    5.633227e-160        2.331587e-15   \n",
        "\n",
        "         Sea Water Temperature  \n",
-       "42019             1.020359e-51  \n",
        "42043             0.000000e+00  \n",
-       "42044             5.564463e-65  \n",
        "42047             0.000000e+00  \n",
        "8764314           5.221730e-43  \n",
+       "42019             1.020359e-51  \n",
+       "42044             5.564463e-65  \n",
        "8770613           2.560192e-23  \n",
        "TABS             1.152166e-214  "
       ]
@@ -1002,6 +1002,7 @@
    ],
    "source": [
     "df_crc.rename(index={0:srt[0], 1:srt[1], 2:srt[2], 3:srt[3], 4:srt[4], 5:srt[5], 6:srt[6] }, inplace=True)\n",
+    "df_crc = df_crc.sort_values(by=['Air Pressure'],ascending=True)\n",
     "df_crc"
    ]
   },
